--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
     <string name="action_settings">Settings</string>
     <string name="hello">hello</string>
     <string name="title_activity_test_service">TestServiceActivity</string>
+    <string name="title_activity_layout">LayoutActivity</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_my_fragment">MyFragmentActivity</string>
+    <string name="title_activity_mywidget">MywidgetActivity</string>
+    <string name="title_activity_blue_tooth">BlueToothActivity</string>
 </resources>
